N°3669 Replace Monorale with Raleway (+ lining figures)

--- a/css/css-variables.scss
+++ b/css/css-variables.scss
@@ -130,7 +130,7 @@ $hover-background-color: #fde17c !default;
 $border-highlight-color: $brand-primary-dark !default;
 $highlight-item-color: $white !default;
 $content-color: #eeeeee !default;
-$default-font-family: "Monorale";
+$default-font-family: "Raleway";
 $icons-filter: hue-rotate(0deg) !default;
 
 %font-awesome-prerequisites {
