--- a/css/login.css
+++ b/css/login.css
@@ -32,7 +32,7 @@ a:hover {
 	height: 100%;
 	position: relative;
 	font-size: 1rem;
-	font-family: "Monorale";
+	font-family: "Raleway";
 	font-weight: 500;
 }
 
