--- a/css/backoffice/base/_typography.scss
+++ b/css/backoffice/base/_typography.scss
@@ -18,146 +18,128 @@
 
 /* This is an overload of the default lib. stylesheet to use local fonts instead of the CDN */
 @font-face {
-	font-family: Monorale;
+	font-family: Raleway;
 	font-weight: 100;
 	font-style: normal;
-	src: local('Raleway-v4020 Thin'),
-	url($approot-relative + 'lib/samvk/monorale-raleway-sober/otf/Monorale-Thin.otf') format('otf'),
-	url($approot-relative + 'lib/samvk/monorale-raleway-sober/woff/Monorale-Thin.woff') format('woff');
+	src: local('Raleway Thin'),
+	url($approot-relative + 'node_modules/raleway-webfont/fonts/Raleway-Thin.ttf') format('truetype'),
 }
 @font-face {
-	font-family: Monorale;
+	font-family: Raleway;
 	font-weight: 100;
 	font-style: italic;
-	src: local('Raleway-v4020 Thin'),
-	url($approot-relative + 'lib/samvk/monorale-raleway-sober/otf/Monorale-ThinItalic.otf') format('otf'),
-	url($approot-relative + 'lib/samvk/monorale-raleway-sober/woff/Monorale-ThinItalic.woff') format('woff');
+	src: local('Raleway Thin'),
+	url($approot-relative + 'node_modules/raleway-webfont/fonts/Raleway-Thin-Italic.ttf') format('truetype'),
 }
 @font-face {
-	font-family: Monorale;
+	font-family: Raleway;
 	font-weight: 200;
 	font-style: normal;
-	src: local('Raleway-v4020 ExtraLight'),
-	url($approot-relative + 'lib/samvk/monorale-raleway-sober/otf/Monorale-ExtraLight.otf') format('otf'),
-	url($approot-relative + 'lib/samvk/monorale-raleway-sober/woff/Monorale-ExtraLight.woff') format('woff');
+	src: local('Raleway ExtraLight'),
+	url($approot-relative + 'node_modules/raleway-webfont/fonts/Raleway-ExtraLight.ttf') format('truetype'),
 }
 @font-face {
-	font-family: Monorale;
+	font-family: Raleway;
 	font-weight: 200;
 	font-style: italic;
-	src: local('Raleway-v4020 ExtraLight'),
-	url($approot-relative + 'lib/samvk/monorale-raleway-sober/otf/Monorale-ExtraLightItalic.otf') format('otf'),
-	url($approot-relative + 'lib/samvk/monorale-raleway-sober/woff/Monorale-ExtraLightItalic.woff') format('woff');
+	src: local('Raleway ExtraLight'),
+	url($approot-relative + 'node_modules/raleway-webfont/fonts/Raleway-ExtraLight-Italic.ttf') format('truetype'),
 }
 @font-face {
-	font-family: Monorale;
+	font-family: Raleway;
 	font-weight: 300;
 	font-style: normal;
-	src: local('Raleway-v4020 Light'),
-	url($approot-relative + 'lib/samvk/monorale-raleway-sober/otf/Monorale-Light.otf') format('otf'),
-	url($approot-relative + 'lib/samvk/monorale-raleway-sober/woff/Monorale-Light.woff') format('woff');
+	src: local('Raleway Light'),
+	url($approot-relative + 'node_modules/raleway-webfont/fonts/Raleway-Light.ttf') format('truetype'),
 }
 @font-face {
-	font-family: Monorale;
+	font-family: Raleway;
 	font-weight: 300;
 	font-style: italic;
-	src: local('Raleway-v4020 Light'),
-	url($approot-relative + 'lib/samvk/monorale-raleway-sober/otf/Monorale-LightItalic.otf') format('otf'),
-	url($approot-relative + 'lib/samvk/monorale-raleway-sober/woff/Monorale-LightItalic.woff') format('woff');
+	src: local('Raleway Light'),
+	url($approot-relative + 'node_modules/raleway-webfont/fonts/Raleway-Light-Italic.ttf') format('truetype'),
 }
 @font-face {
-	font-family: Monorale;
+	font-family: Raleway;
 	font-weight: 400;
 	font-style: normal;
-	src: local('Raleway-v4020'),
-	url($approot-relative + 'lib/samvk/monorale-raleway-sober/otf/Monorale-Regular.otf') format('otf'),
-	url($approot-relative + 'lib/samvk/monorale-raleway-sober/woff/Monorale-Regular.woff') format('woff');
+	src: local('Raleway'),
+	url($approot-relative + 'node_modules/raleway-webfont/fonts/Raleway-Regular.ttf') format('truetype'),
 }
 @font-face {
-	font-family: Monorale;
+	font-family: Raleway;
 	font-weight: 400;
 	font-style: italic;
-	src: local('Raleway-v4020'),
-	url($approot-relative + 'lib/samvk/monorale-raleway-sober/otf/Monorale-Italic.otf') format('otf'),
-	url($approot-relative + 'lib/samvk/monorale-raleway-sober/woff/Monorale-Italic.woff') format('woff');
+	src: local('Raleway'),
+	url($approot-relative + 'node_modules/raleway-webfont/fonts/Raleway-Regular-Italic.ttf') format('truetype'),
 }
 @font-face {
-	font-family: Monorale;
+	font-family: Raleway;
 	font-weight: 500;
 	font-style: normal;
-	src: local('Raleway-v4020 Medium'),
-	url($approot-relative + 'lib/samvk/monorale-raleway-sober/otf/Monorale-Medium.otf') format('otf'),
-	url($approot-relative + 'lib/samvk/monorale-raleway-sober/woff/Monorale-Medium.woff') format('woff');
+	src: local('Raleway Medium'),
+	url($approot-relative + 'node_modules/raleway-webfont/fonts/Raleway-Medium.ttf') format('truetype'),
 }
 @font-face {
-	font-family: Monorale;
+	font-family: Raleway;
 	font-weight: 500;
 	font-style: italic;
-	src: local('Raleway-v4020 Medium'),
-	url($approot-relative + 'lib/samvk/monorale-raleway-sober/otf/Monorale-MediumItalic.otf') format('otf'),
-	url($approot-relative + 'lib/samvk/monorale-raleway-sober/woff/Monorale-MediumItalic.woff') format('woff');
+	src: local('Raleway Medium'),
+	url($approot-relative + 'node_modules/raleway-webfont/fonts/Raleway-Medium-Italic.ttf') format('truetype'),
 }
 @font-face {
-	font-family: Monorale;
+	font-family: Raleway;
 	font-weight: 600;
 	font-style: normal;
-	src: local('Raleway-v4020 SemiBold'),
-	url($approot-relative + 'lib/samvk/monorale-raleway-sober/otf/Monorale-SemiBold.otf') format('otf'),
-	url($approot-relative + 'lib/samvk/monorale-raleway-sober/woff/Monorale-SemiBold.woff') format('woff');
+	src: local('Raleway SemiBold'),
+	url($approot-relative + 'node_modules/raleway-webfont/fonts/Raleway-SemiBold.ttf') format('truetype'),
 }
 @font-face {
-	font-family: Monorale;
+	font-family: Raleway;
 	font-weight: 600;
 	font-style: italic;
-	src: local('Raleway-v4020 SemiBold'),
-	url($approot-relative + 'lib/samvk/monorale-raleway-sober/otf/Monorale-SemiBoldItalic.otf') format('otf'),
-	url($approot-relative + 'lib/samvk/monorale-raleway-sober/woff/Monorale-SemiBoldItalic.woff') format('woff');
+	src: local('Raleway SemiBold'),
+	url($approot-relative + 'node_modules/raleway-webfont/fonts/Raleway-SemiBold-Italic.ttf') format('truetype'),
 }
 @font-face {
-	font-family: Monorale;
+	font-family: Raleway;
 	font-weight: 700;
 	font-style: normal;
-	src: local('Raleway-v4020'),
-	url($approot-relative + 'lib/samvk/monorale-raleway-sober/otf/Monorale-Bold.otf') format('otf'),
-	url($approot-relative + 'lib/samvk/monorale-raleway-sober/woff/Monorale-Bold.woff') format('woff');
+	src: local('Raleway'),
+	url($approot-relative + 'node_modules/raleway-webfont/fonts/Raleway-Bold.ttf') format('truetype'),
 }
 @font-face {
-	font-family: Monorale;
+	font-family: Raleway;
 	font-weight: 700;
 	font-style: italic;
-	src: local('Raleway-v4020'),
-	url($approot-relative + 'lib/samvk/monorale-raleway-sober/otf/Monorale-BoldItalic.otf') format('otf'),
-	url($approot-relative + 'lib/samvk/monorale-raleway-sober/woff/Monorale-BoldItalic.woff') format('woff');
+	src: local('Raleway'),
+	url($approot-relative + 'node_modules/raleway-webfont/fonts/Raleway-Bold-Italic.ttf') format('truetype'),
 }
 @font-face {
-	font-family: Monorale;
+	font-family: Raleway;
 	font-weight: 800;
 	font-style: normal;
-	src: local('Raleway-v4020 ExtraBold'),
-	url($approot-relative + 'lib/samvk/monorale-raleway-sober/otf/Monorale-ExtraBold.otf') format('otf'),
-	url($approot-relative + 'lib/samvk/monorale-raleway-sober/woff/Monorale-ExtraBold.woff') format('woff');
+	src: local('Raleway ExtraBold'),
+	url($approot-relative + 'node_modules/raleway-webfont/fonts/Raleway-ExtraBold.ttf') format('truetype'),
 }
 @font-face {
-	font-family: Monorale;
+	font-family: Raleway;
 	font-weight: 800;
 	font-style: italic;
-	src: local('Raleway-v4020 ExtraBold'),
-	url($approot-relative + 'lib/samvk/monorale-raleway-sober/otf/Monorale-ExtraBoldItalic.otf') format('otf'),
-	url($approot-relative + 'lib/samvk/monorale-raleway-sober/woff/Monorale-ExtraBoldItalic.woff') format('woff');
+	src: local('Raleway ExtraBold'),
+	url($approot-relative + 'node_modules/raleway-webfont/fonts/Raleway-ExtraBold-Italic.ttf') format('truetype'),
 }
 @font-face {
-	font-family: Monorale;
+	font-family: Raleway;
 	font-weight: 900;
 	font-style: normal;
-	src: local('Raleway-v4020 Black'),
-	url($approot-relative + 'lib/samvk/monorale-raleway-sober/otf/Monorale-Black.otf') format('otf'),
-	url($approot-relative + 'lib/samvk/monorale-raleway-sober/woff/Monorale-Black.woff') format('woff');
+	src: local('Raleway Black'),
+	url($approot-relative + 'node_modules/raleway-webfont/fonts/Raleway-Black.ttf') format('truetype'),
 }
 @font-face {
-	font-family: Monorale;
+	font-family: Raleway;
 	font-weight: 900;
 	font-style: italic;
-	src: local('Raleway-v4020 Black'),
-	url($approot-relative + 'lib/samvk/monorale-raleway-sober/otf/Monorale-BlackItalic.otf') format('otf'),
-	url($approot-relative + 'lib/samvk/monorale-raleway-sober/woff/Monorale-BlackItalic.woff') format('woff');
+	src: local('Raleway Black'),
+	url($approot-relative + 'node_modules/raleway-webfont/fonts/Raleway-Black-Italic.ttf') format('truetype'),
 }
