--- a/css/backoffice/utils/helpers/_typography.scss
+++ b/css/backoffice/utils/helpers/_typography.scss
@@ -30,233 +30,365 @@
 	950		Extra Black (Ultra Black)
  */
 %ibo-font-ral-nor-50 {
-	font-size: $ibo-font-size-50;
-	font-family: "Monorale";
-	font-weight: 400;
+  font-size: $ibo-font-size-50;
+  font-family: "Raleway";
+  font-weight: 400;
+  -webkit-font-feature-settings: "lnum";
+  -moz-font-feature-settings: "lnum";
+  font-feature-settings: "lnum";
 }
 %ibo-font-ral-nor-100 {
 	font-size: $ibo-font-size-100;
-	font-family: "Monorale";
+	font-family: "Raleway";
 	font-weight: 400;
+  -webkit-font-feature-settings: "lnum";
+  -moz-font-feature-settings: "lnum";
+  font-feature-settings: "lnum";
 }
 %ibo-font-ral-nor-150 {
 	font-size: $ibo-font-size-150;
-	font-family: "Monorale";
+	font-family: "Raleway";
 	font-weight: 400;
+  -webkit-font-feature-settings: "lnum";
+  -moz-font-feature-settings: "lnum";
+  font-feature-settings: "lnum";
 }
 %ibo-font-ral-nor-200 {
 	font-size: $ibo-font-size-200;
-	font-family: "Monorale";
+	font-family: "Raleway";
 	font-weight: 400;
+  -webkit-font-feature-settings: "lnum";
+  -moz-font-feature-settings: "lnum";
+  font-feature-settings: "lnum";
 }
 %ibo-font-ral-nor-250 {
 	font-size: $ibo-font-size-250;
-	font-family: "Monorale";
+	font-family: "Raleway";
 	font-weight: 400;
+  -webkit-font-feature-settings: "lnum";
+  -moz-font-feature-settings: "lnum";
+  font-feature-settings: "lnum";
 }
 %ibo-font-ral-nor-300 {
 	font-size: $ibo-font-size-300;
-	font-family:"Monorale";
+	font-family:"Raleway";
 	font-weight: 400;
+  -webkit-font-feature-settings: "lnum";
+  -moz-font-feature-settings: "lnum";
+  font-feature-settings: "lnum";
 }
 %ibo-font-ral-nor-350 {
 	font-size: $ibo-font-size-350;
-	font-family: "Monorale";
+	font-family: "Raleway";
 	font-weight: 400;
+  -webkit-font-feature-settings: "lnum";
+  -moz-font-feature-settings: "lnum";
+  font-feature-settings: "lnum";
 }
 %ibo-font-ral-nor-400 {
 	font-size: $ibo-font-size-400;
-	font-family: "Monorale";
+	font-family: "Raleway";
 	font-weight: 400;
+  -webkit-font-feature-settings: "lnum";
+  -moz-font-feature-settings: "lnum";
+  font-feature-settings: "lnum";
 }
 %ibo-font-ral-nor-450 {
 	font-size: $ibo-font-size-450;
-	font-family: "Monorale";
+	font-family: "Raleway";
 	font-weight: 400;
+  -webkit-font-feature-settings: "lnum";
+  -moz-font-feature-settings: "lnum";
+  font-feature-settings: "lnum";
 }
 %ibo-font-ral-nor-500 {
 	font-size: $ibo-font-size-500;
-	font-family: "Monorale";
+	font-family: "Raleway";
 	font-weight: 400;
+  -webkit-font-feature-settings: "lnum";
+  -moz-font-feature-settings: "lnum";
+  font-feature-settings: "lnum";
 }
 %ibo-font-ral-nor-550 {
 	font-size: $ibo-font-size-550;
-	font-family: "Monorale";
+	font-family: "Raleway";
 	font-weight: 400;
+  -webkit-font-feature-settings: "lnum";
+  -moz-font-feature-settings: "lnum";
+  font-feature-settings: "lnum";
 }
 %ibo-font-ral-med-50 {
 	font-size: $ibo-font-size-50;
-	font-family: "Monorale";
+	font-family: "Raleway";
 	font-weight: 500;
+  -webkit-font-feature-settings: "lnum";
+  -moz-font-feature-settings: "lnum";
+  font-feature-settings: "lnum";
 }
 %ibo-font-ral-med-100 {
 	font-size: $ibo-font-size-100;
-	font-family: "Monorale";
+	font-family: "Raleway";
 	font-weight: 500;
+  -webkit-font-feature-settings: "lnum";
+  -moz-font-feature-settings: "lnum";
+  font-feature-settings: "lnum";
 }
 %ibo-font-ral-med-150 {
 	font-size: $ibo-font-size-150;
-	font-family: "Monorale";
+	font-family: "Raleway";
 	font-weight: 500;
+  -webkit-font-feature-settings: "lnum";
+  -moz-font-feature-settings: "lnum";
+  font-feature-settings: "lnum";
 }
 %ibo-font-ral-med-200 {
 	font-size: $ibo-font-size-200;
-	font-family: "Monorale";
+	font-family: "Raleway";
 	font-weight: 500;
+  -webkit-font-feature-settings: "lnum";
+  -moz-font-feature-settings: "lnum";
+  font-feature-settings: "lnum";
 }
 %ibo-font-ral-med-250 {
 	font-size: $ibo-font-size-250;
-	font-family: "Monorale";
+	font-family: "Raleway";
 	font-weight: 500;
+  -webkit-font-feature-settings: "lnum";
+  -moz-font-feature-settings: "lnum";
+  font-feature-settings: "lnum";
 }
 %ibo-font-ral-med-300 {
 	font-size: $ibo-font-size-300;
-	font-family:"Monorale";
+	font-family:"Raleway";
 	font-weight: 500;
+  -webkit-font-feature-settings: "lnum";
+  -moz-font-feature-settings: "lnum";
+  font-feature-settings: "lnum";
 }
 %ibo-font-ral-med-350 {
 	font-size: $ibo-font-size-350;
-	font-family: "Monorale";
+	font-family: "Raleway";
 	font-weight: 500;
+  -webkit-font-feature-settings: "lnum";
+  -moz-font-feature-settings: "lnum";
+  font-feature-settings: "lnum";
 }
 %ibo-font-ral-med-400 {
 	font-size: $ibo-font-size-400;
-	font-family: "Monorale";
+	font-family: "Raleway";
 	font-weight: 500;
+  -webkit-font-feature-settings: "lnum";
+  -moz-font-feature-settings: "lnum";
+  font-feature-settings: "lnum";
 }
 %ibo-font-ral-med-450 {
 	font-size: $ibo-font-size-450;
-	font-family: "Monorale";
+	font-family: "Raleway";
 	font-weight: 500;
+  -webkit-font-feature-settings: "lnum";
+  -moz-font-feature-settings: "lnum";
+  font-feature-settings: "lnum";
 }
 %ibo-font-ral-med-500 {
 	font-size: $ibo-font-size-500;
-	font-family: "Monorale";
+	font-family: "Raleway";
 	font-weight: 500;
+  -webkit-font-feature-settings: "lnum";
+  -moz-font-feature-settings: "lnum";
+  font-feature-settings: "lnum";
 }
 %ibo-font-ral-med-550 {
 	font-size: $ibo-font-size-550;
-	font-family: "Monorale";
+	font-family: "Raleway";
 	font-weight: 500;
+  -webkit-font-feature-settings: "lnum";
+  -moz-font-feature-settings: "lnum";
+  font-feature-settings: "lnum";
 }
 %ibo-font-ral-bol-50 {
 	font-size: $ibo-font-size-50;
-	font-family: "Monorale";
+	font-family: "Raleway";
 	font-weight: 700;
+  -webkit-font-feature-settings: "lnum";
+  -moz-font-feature-settings: "lnum";
+  font-feature-settings: "lnum";
 }
 %ibo-font-ral-bol-100 {
 	font-size: $ibo-font-size-100;
-	font-family: "Monorale";
+	font-family: "Raleway";
 	font-weight: 700;
+  -webkit-font-feature-settings: "lnum";
+  -moz-font-feature-settings: "lnum";
+  font-feature-settings: "lnum";
 }
 %ibo-font-ral-bol-150 {
 	font-size: $ibo-font-size-150;
-	font-family: "Monorale";
+	font-family: "Raleway";
 	font-weight: 700;
+  -webkit-font-feature-settings: "lnum";
+  -moz-font-feature-settings: "lnum";
+  font-feature-settings: "lnum";
 }
 %ibo-font-ral-bol-200 {
 	font-size: $ibo-font-size-200;
-	font-family: "Monorale";
+	font-family: "Raleway";
 	font-weight: 700;
+  -webkit-font-feature-settings: "lnum";
+  -moz-font-feature-settings: "lnum";
+  font-feature-settings: "lnum";
 }
 %ibo-font-ral-bol-250 {
 	font-size: $ibo-font-size-250;
-	font-family: "Monorale";
+	font-family: "Raleway";
 	font-weight: 700;
+  -webkit-font-feature-settings: "lnum";
+  -moz-font-feature-settings: "lnum";
+  font-feature-settings: "lnum";
 }
 %ibo-font-ral-bol-300 {
 	font-size: $ibo-font-size-300;
-	font-family: "Monorale";
+	font-family: "Raleway";
 	font-weight: 700;
+  -webkit-font-feature-settings: "lnum";
+  -moz-font-feature-settings: "lnum";
+  font-feature-settings: "lnum";
 }
 %ibo-font-ral-bol-350 {
 	font-size: $ibo-font-size-350;
-	font-family: "Monorale";
+	font-family: "Raleway";
 	font-weight: 700;
+  -webkit-font-feature-settings: "lnum";
+  -moz-font-feature-settings: "lnum";
+  font-feature-settings: "lnum";
 }
 %ibo-font-ral-bol-400 {
 	font-size: $ibo-font-size-400;
-	font-family: "Monorale";
+	font-family: "Raleway";
 	font-weight: 700;
+  -webkit-font-feature-settings: "lnum";
+  -moz-font-feature-settings: "lnum";
+  font-feature-settings: "lnum";
 }
 %ibo-font-ral-bol-450 {
 	font-size: $ibo-font-size-450;
-	font-family: "Monorale";
+	font-family: "Raleway";
 	font-weight: 700;
+  -webkit-font-feature-settings: "lnum";
+  -moz-font-feature-settings: "lnum";
+  font-feature-settings: "lnum";
 }
 %ibo-font-ral-bol-500 {
 	font-size: $ibo-font-size-500;
-	font-family: "Monorale";
+	font-family: "Raleway";
 	font-weight: 700;
+  -webkit-font-feature-settings: "lnum";
+  -moz-font-feature-settings: "lnum";
+  font-feature-settings: "lnum";
 }
 %ibo-font-ral-bol-550 {
 	font-size: $ibo-font-size-550;
-	font-family: "Monorale";
+	font-family: "Raleway";
 	font-weight: 700;
+  -webkit-font-feature-settings: "lnum";
+  -moz-font-feature-settings: "lnum";
+  font-feature-settings: "lnum";
 }
 %ibo-font-ral-ita-50 {
 	font-size: $ibo-font-size-50;
-	font-family: "Monorale";
+	font-family: "Raleway";
 	font-weight: 400;
 	font-style: italic;
+  -webkit-font-feature-settings: "lnum";
+  -moz-font-feature-settings: "lnum";
+  font-feature-settings: "lnum";
 }
 %ibo-font-ral-ita-100 {
 	font-size: $ibo-font-size-100;
-	font-family: "Monorale";
+	font-family: "Raleway";
 	font-weight: 400;
 	font-style: italic;
-}
+  -webkit-font-feature-settings: "lnum";
+  -moz-font-feature-settings: "lnum";
+  font-feature-settings: "lnum";
+  }
 %ibo-font-ral-ita-150 {
 	font-size: $ibo-font-size-150;
-	font-family: "Monorale";
+	font-family: "Raleway";
 	font-weight: 400;
 	font-style: italic;
+  -webkit-font-feature-settings: "lnum";
+  -moz-font-feature-settings: "lnum";
+  font-feature-settings: "lnum";
 }
 %ibo-font-ral-ita-200 {
 	font-size: $ibo-font-size-200;
-	font-family: "Monorale";
+	font-family: "Raleway";
 	font-weight: 400;
 	font-style: italic;
+  -webkit-font-feature-settings: "lnum";
+  -moz-font-feature-settings: "lnum";
+  font-feature-settings: "lnum";
 }
 %ibo-font-ral-ita-250 {
 	font-size: $ibo-font-size-250;
-	font-family: "Monorale";
+	font-family: "Raleway";
 	font-weight: 400;
 	font-style: italic;
+  -webkit-font-feature-settings: "lnum";
+  -moz-font-feature-settings: "lnum";
+  font-feature-settings: "lnum";
 }
 %ibo-font-ral-ita-300 {
 	font-size: $ibo-font-size-300;
-	font-family: "Monorale";
+	font-family: "Raleway";
 	font-weight: 400;
 	font-style: italic;
+  -webkit-font-feature-settings: "lnum";
+  -moz-font-feature-settings: "lnum";
+  font-feature-settings: "lnum";
 }
 %ibo-font-ral-ita-350 {
 	font-size: $ibo-font-size-350;
-	font-family: "Monorale";
+	font-family: "Raleway";
 	font-weight: 400;
 	font-style: italic;
+  -webkit-font-feature-settings: "lnum";
+  -moz-font-feature-settings: "lnum";
+  font-feature-settings: "lnum";
 }
 %ibo-font-ral-ita-400 {
 	font-size: $ibo-font-size-400;
-	font-family: "Monorale";
+	font-family: "Raleway";
 	font-weight: 400;
 	font-style: italic;
+  -webkit-font-feature-settings: "lnum";
+  -moz-font-feature-settings: "lnum";
+  font-feature-settings: "lnum";
 }
 %ibo-font-ral-ita-450 {
 	font-size: $ibo-font-size-450;
-	font-family: "Monorale";
+	font-family: "Raleway";
 	font-weight: 400;
 	font-style: italic;
+  -webkit-font-feature-settings: "lnum";
+  -moz-font-feature-settings: "lnum";
+  font-feature-settings: "lnum";
 }
 %ibo-font-ral-ita-500 {
 	font-size: $ibo-font-size-500;
-	font-family: "Monorale";
+	font-family: "Raleway";
 	font-weight: 400;
 	font-style: italic;
+  -webkit-font-feature-settings: "lnum";
+  -moz-font-feature-settings: "lnum";
+  font-feature-settings: "lnum";
 }
 %ibo-font-ral-ita-550 {
 	font-size: $ibo-font-size-550;
-	font-family: "Monorale";
+	font-family: "Raleway";
 	font-weight: 400;
 	font-style: italic;
+  -webkit-font-feature-settings: "lnum";
+  -moz-font-feature-settings: "lnum";
+  font-feature-settings: "lnum";
 }
