Add semi bold font to typography

--- a/css/backoffice/utils/helpers/_typography.scss
+++ b/css/backoffice/utils/helpers/_typography.scss
@@ -293,6 +293,94 @@
   -moz-font-feature-settings: "lnum";
   font-feature-settings: "lnum";
 }
+%ibo-font-ral-sembol-50 {
+  font-size: $ibo-font-size-50;
+  font-family: "Raleway";
+  font-weight: 600;
+  -webkit-font-feature-settings: "lnum";
+  -moz-font-feature-settings: "lnum";
+  font-feature-settings: "lnum";
+}
+%ibo-font-ral-sembol-100 {
+  font-size: $ibo-font-size-100;
+  font-family: "Raleway";
+  font-weight: 600;
+  -webkit-font-feature-settings: "lnum";
+  -moz-font-feature-settings: "lnum";
+  font-feature-settings: "lnum";
+}
+%ibo-font-ral-sembol-150 {
+  font-size: $ibo-font-size-150;
+  font-family: "Raleway";
+  font-weight: 600;
+  -webkit-font-feature-settings: "lnum";
+  -moz-font-feature-settings: "lnum";
+  font-feature-settings: "lnum";
+}
+%ibo-font-ral-sembol-200 {
+  font-size: $ibo-font-size-200;
+  font-family: "Raleway";
+  font-weight: 600;
+  -webkit-font-feature-settings: "lnum";
+  -moz-font-feature-settings: "lnum";
+  font-feature-settings: "lnum";
+}
+%ibo-font-ral-sembol-250 {
+  font-size: $ibo-font-size-250;
+  font-family: "Raleway";
+  font-weight: 600;
+  -webkit-font-feature-settings: "lnum";
+  -moz-font-feature-settings: "lnum";
+  font-feature-settings: "lnum";
+}
+%ibo-font-ral-sembol-300 {
+  font-size: $ibo-font-size-300;
+  font-family: "Raleway";
+  font-weight: 600;
+  -webkit-font-feature-settings: "lnum";
+  -moz-font-feature-settings: "lnum";
+  font-feature-settings: "lnum";
+}
+%ibo-font-ral-sembol-350 {
+  font-size: $ibo-font-size-350;
+  font-family: "Raleway";
+  font-weight: 600;
+  -webkit-font-feature-settings: "lnum";
+  -moz-font-feature-settings: "lnum";
+  font-feature-settings: "lnum";
+}
+%ibo-font-ral-sembol-400 {
+  font-size: $ibo-font-size-400;
+  font-family: "Raleway";
+  font-weight: 600;
+  -webkit-font-feature-settings: "lnum";
+  -moz-font-feature-settings: "lnum";
+  font-feature-settings: "lnum";
+}
+%ibo-font-ral-sembol-450 {
+  font-size: $ibo-font-size-450;
+  font-family: "Raleway";
+  font-weight: 600;
+  -webkit-font-feature-settings: "lnum";
+  -moz-font-feature-settings: "lnum";
+  font-feature-settings: "lnum";
+}
+%ibo-font-ral-sembol-500 {
+  font-size: $ibo-font-size-500;
+  font-family: "Raleway";
+  font-weight: 600;
+  -webkit-font-feature-settings: "lnum";
+  -moz-font-feature-settings: "lnum";
+  font-feature-settings: "lnum";
+}
+%ibo-font-ral-sembol-550 {
+  font-size: $ibo-font-size-550;
+  font-family: "Raleway";
+  font-weight: 600;
+  -webkit-font-feature-settings: "lnum";
+  -moz-font-feature-settings: "lnum";
+  font-feature-settings: "lnum";
+}
 %ibo-font-ral-ita-50 {
 	font-size: $ibo-font-size-50;
 	font-family: "Raleway";
