N°3586 - Fix login window not correctly displayed

--- a/templates/login/login.html.twig
+++ b/templates/login/login.html.twig
@@ -12,7 +12,7 @@
 			{% if bFailedLogin %}
 				<p class="hilite">{{ sMessage }}</p>
 			{% else %}
-				<p>{{ sMessage }}</p>
+				<p>{{ sMessage|raw }}</p>
 			{% endif %}
 		</div>
 	{% endblock login_title %}
