Fix URL with special chars being output wrong (completes c98881671)

--- a/templates/pages/backoffice/webpage/layout.html.twig
+++ b/templates/pages/backoffice/webpage/layout.html.twig
@@ -57,7 +57,7 @@
 <script type="text/javascript">
 	var aListJsFiles = [];
 	{% for sJsFile in aPage.aJsFiles %}
-		aListJsFiles.push("{{ sJsFile}}");
+		aListJsFiles.push("{{ sJsFile|raw }}");
 	{% endfor %}
 </script>
 {% block iboPageJsFiles %}
